chore: use ServiceClient instead of SoapClient in UserService